Fix errors not working on IE and Edge

--- a/hauntedtie/skin/static/domiverse/domiverse.css
+++ b/hauntedtie/skin/static/domiverse/domiverse.css
@@ -3,11 +3,6 @@
     src: url("mecha.ttf") format('truetype');
 }
 
-:root {
-    --header-height: 865px;
-    --min-width: 1280px;
-}
-
 .center {
     left: 0;
     right: 0;
@@ -74,7 +69,7 @@ div.main {
     width: 100%;
     height: 100%;
     z-index: 1;
-    min-width: var(--min-width);
+    min-width: 1280px;
 }
 
 
@@ -83,12 +78,12 @@ div.main {
 #section-header {
     top: 0px;
     width: 100%;
-    height: var(--header-height);
+    height: 865px;
 }
 
 #section-header-faces {
     bottom: 0px;
-    width: var(--min-width);
+    width: 1280px;
     height: 456px;
     margin: 0 auto;
     position: relative;
@@ -99,7 +94,7 @@ div.main {
     background-position: center;
     position: absolute;
     width: 100%;
-    height: var(--header-height);
+    height: 865px;
 }
 
 #banner-0 {
@@ -137,7 +132,7 @@ div.main {
 
 #section-menu {
     position: absolute;
-    top: var(--header-height);
+    top: 865px;
     width: 100%;
     height: 168px;
     background-image: url("images/menu_bg.png");
@@ -148,7 +143,7 @@ div.main {
 
 #section-menu-inside {
     top: 0px;
-    width: var(--min-width);
+    width: 1280px;
     height: 100%;
     margin: 0 auto;
     position: relative;
@@ -282,7 +277,7 @@ div.main {
 
 #section-media-inside {
     top: 0px;
-    width: var(--min-width);
+    width: 1280px;
     height: 100%;
     margin: 0 auto;
     position: relative;
@@ -313,7 +308,7 @@ div.main {
 
 #section-fighters-inside {
     top: 0px;
-    width: var(--min-width);
+    width: 1280px;
     height: 100%;
     margin: 0 auto;
     position: relative;
